# stock-postproc

./: .env.example  .gitignore  .pre-commit-config.yaml  .spelling.dic  README.md  comstock_column_definitions.json  prefect.yaml  pyproject.toml
.run/: Pre-commit.run.xml  Reset Prefect.run.xml  Start Prefect Server.run.xml
schemas/: comstock_column_definitions.json  comstock_data_dictionary.json
server/: .env.example  docker-compose.yml  run-prefect.sh
server/dashboard/: Dockerfile
server/dynamic_dashboard/: Dockerfile
server/scripts/: create_blocks.py
server/worker/: Dockerfile
stock_postproc/: __main__.py  create_blocks.py  sync_s3_to_minio.py  utils.py
