[project]
name = "stock-postproc"
version = "0.1.0"
description = "ComStock and ResStock Post Processing"
requires-python = ">=3.13"
dependencies = [
    "check-jsonschema>=0.33.0",
    "fsspec>=2025.3.2",
    "geopandas>=1.0.1",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "polars>=1.29.0",
    "pre-commit>=4.2.0",
    "prefect>=3.4.1",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.4",
    "s3fs>=2025.3.2",
]
