[project]
name = "stock-postproc"
version = "0.1.0"
description = "ComStock and ResStock Post Processing Utilities"
requires-python = ">=3.12"
dependencies = [
    "prefect[aws,github]>=3.4",
    "pydantic>=2.11.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.1",
]
